Fix single pixel gap between sections on firefox

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -12,6 +12,7 @@
   width: 100%;
   height: auto;
   z-index: 0;
+  margin-bottom: -1px;
   margin-top: -250px;
 
   svg {
@@ -99,6 +100,7 @@
 
 .theme__transition {
   margin-bottom: -20px;
+  margin-top: -1px;
   
   @media (max-width: $md) {
     margin-bottom: 0px;
